--- a/text/erasure_coding.tex
+++ b/text/erasure_coding.tex
@@ -44,7 +44,7 @@ The original data may be reconstructed with any 342 of the 1,023 resultant items
         \ecrecover(\set{\build{(\spl{2}(\mathbf{x})\sub{p}, i)}{\tup{\mathbf{x}, i} \in \mathbf{c}}})
       \mid p \in \Nmax{k}])) &\text{always}\\
     \end{cases}
-%      [ \ecrecover(\mathbf{y}, i) \mid \mathbf{y} \orderedin \transpose[ \spl{2}(\mathbf{x}) \mid (\mathbf{x}, i) \orderedin \mathbf{c}] ]
+%      [ \ecrecover(\mathbf{y}, i) \mid \mathbf{y} \orderedin \transpose\sq{\build{\spl{2}(\mathbf{x})}{(\mathbf{x}, i) \orderedin \mathbf{c}}} ]
   }
 \end{equation}
 
