--- a/text/notation.tex
+++ b/text/notation.tex
@@ -51,7 +51,7 @@ The term $\error$ is utilized to indicate the unexpected failure of an operation
 
 $\N$ denotes the set of naturals including zero whereas $\Nmax{n}$ implies a restriction on that set to values less than $n$. Formally, $\N = \set{0, 1, \dots}$ and $\Nmax{n} = \set{\build{x}{x \in \N, x < n}}$.
 
-$\mathbb{Z}$ denotes the set of integers. We denote $\mathbb{Z}_{a \dots b}$ to be the set of integers within the interval $[a, b)$. Formally, $\mathbb{Z}_{a \dots b} = \set{\build{x}{x \in \mathbb{Z}, a \le x < b}}$. \Eg $\mathbb{Z}_{2 \dots 5} = \set{2, 3, 4}$. We denote the offset/length form of this set as $\mathbb{Z}_{a \dots +b}$, a short form of $\mathbb{Z}_{a \dots a+b}$.
+$\mathbb{Z}$ denotes the set of integers. We denote $\mathbb{Z}\interval{a}{b}$ to be the set of integers within the interval $[a, b)$. Formally, $\mathbb{Z}\interval{a}{b} = \set{\build{x}{x \in \mathbb{Z}, a \le x < b}}$. \Eg $\mathbb{Z}\interval{2}{5} = \set{2, 3, 4}$. We denote the offset/length form of this set as $\mathbb{Z}\subrange{a}{b}$, a short form of $\mathbb{Z}\interval{a}{a+b}$.
 
 It can sometimes be useful to represent lengths of sequences and yet limit their size, especially when dealing with sequences of octets which must be stored practically. Typically, these lengths can be defined as the set $\Nbits{32}$. To improve clarity, we denote $\bloblength$ as the set of lengths of octet sequences and is equivalent to $\Nbits{32}$.
 
