--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -201,9 +201,9 @@ Where:
     j \orderedin \Nmax{\len{\wpX_\wp¬workitems}}
   ] \\
   \countupexports(\wpX, j) \equiv \,&\begin{cases}
-    \tup{\oversize, u, \sq{\segment_0, \segment_0, \dots}_{\dots \local¬theitem_\wi¬exportcount}} &\when \len{r} + z > \mathsf{W}_R\\
-    \tup{\badexports, u, \sq{\segment_0, \segment_0, \dots}_{\dots \local¬theitem_\wi¬exportcount}} &\otherwhen \len{\mathbf{e}} \ne \local¬theitem_\wi¬exportcount \\
-    \tup{r, u, \sq{\segment_0, \segment_0, \dots}_{\dots \local¬theitem_\wi¬exportcount}} &\otherwhen r \not\in \blob \\
+    \tup{\oversize, u, \sq{\segment_0, \segment_0, \dots}\interval{}{\local¬theitem_\wi¬exportcount}} &\when \len{r} + z > \mathsf{W}_R\\
+    \tup{\badexports, u, \sq{\segment_0, \segment_0, \dots}\interval{}{\local¬theitem_\wi¬exportcount}} &\otherwhen \len{\mathbf{e}} \ne \local¬theitem_\wi¬exportcount \\
+    \tup{r, u, \sq{\segment_0, \segment_0, \dots}\interval{}{\local¬theitem_\wi¬exportcount}} &\otherwhen r \not\in \blob \\
     \tup{r, u, \mathbf{e}} &\otherwise \\
     \multicolumn{2}{l}{\where \tup{r, \mathbf{e}, u} = \Psi_R(
       j, \wpX, \mathbf{o}, \sq{\build{\importsegmentdata(w)}{w \orderedin \wpX_\wp¬workitems}}, \ell
