--- a/text/header.tex
+++ b/text/header.tex
@@ -26,7 +26,7 @@ The extrinsic hash is a Merkle commitment to the block's extrinsic data, taking 
   \H_\¬extrinsichash &\in \hash \ ,\quad
   \H_\¬extrinsichash \equiv \blake(\se(\blake^\#(\mathbf{a}))) \\
   \where \mathbf{a} &= [\se_T(\xttickets), \se_P(\xtpreimages), \mathbf{g}, \se_A(\xtassurances), \se_D(\xtdisputes)] \\
-  \also \mathbf{g} &= \se(\var{[(\blake(w), \fixedencode{4}{t}, \var{a}) \mid (w, t, a) \orderedin \xtguarantees]})
+  \also \mathbf{g} &= \se(\var{\sq{\build{(\blake(w), \fixedencode{4}{t}, \var{a})}{(w, t, a) \orderedin \xtguarantees}}})
 \end{align}
 
 A block may only be regarded as valid once the time-slot index $\H_\¬timeslot$ is in the past. It is always strictly greater than that of its parent. Formally:
