--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -12,7 +12,7 @@ We define the state-key constructor functions $C$ as:
     \Nbits{8} \cup (\Nbits{8}, \serviceid) \cup \tup{\serviceid, \blob} &\to \bloboflen{31} \\
     i \in \Nbits{8} &\mapsto [i, 0, 0, \dots] \\
     (i, s \in \serviceid) &\mapsto [i, n_0, 0, n_1, 0, n_2, 0, n_3, 0, 0, \dots]\ \where n = \fixedencode{4}{s} \\
-    (s, h) &\mapsto [n_0, a_0, n_1, a_1, n_2, a_2, n_3, a_3, a_4, a_5, \dots, a_{26}]\ \where n = \fixedencode{4}{s}, a = \blake(h)_{0\dots 27}
+    (s, h) &\mapsto [n_0, a_0, n_1, a_1, n_2, a_2, n_3, a_3, a_4, a_5, \dots, a_{26}]\ \where n = \fixedencode{4}{s}, a = \blake(h)\interval{0}{27}
   }
 \end{equation}
 
@@ -32,17 +32,17 @@ The state serialization is then defined as the dictionary built from the amalgam
     &&C(7) &\mapsto \encode{\stagingset} \;, \\
     &&C(8) &\mapsto \encode{\activeset} \;, \\
     &&C(9) &\mapsto \encode{\previousset} \;, \\
-    &&C(10) &\mapsto \se([\maybe{(w, \fixedencode{4}{t})} \mid (w, t) \orderedin \reports]) \;, \\
+    &&C(10) &\mapsto \se(\sq{\build{\maybe{(w, \fixedencode{4}{t})}}{(w, t) \orderedin \reports}}) \;, \\
     &&C(11) &\mapsto \fixedencode{4}{\thetime} \;, \\
     &&C(12) &\mapsto \fixedencode{4}{\manager, \assigners, \delegator} \concat \encode{\alwaysaccers} \;, \\
     &&C(13) &\mapsto \fixedencode{4}{\valstatsaccumulator, \valstatsprevious}, \corestats, \servicestats \;, \\
-    &&C(14) &\mapsto \se([\var{(\mathbf{w}, \var{\mathbf{d}})} \mid (\mathbf{w}, \mathbf{d}) \orderedin \mathbf{i} \mid \mathbf{i} \orderedin \ready]) \;, \\
-    &&C(15) &\mapsto \encode{[\var{\mathbf{i}} \mid \mathbf{i} \orderedin \accumulated]} \;, \\
-    &&C(16) &\mapsto \se(\var{[(\fixedencode{4}{s}, \encode{h}) \mid (s, h) \orderedin \lastaccout]}) \;, \\
+    &&C(14) &\mapsto \se(\sq{\build{\var{(\mathbf{w}, \var{\mathbf{d}})}}{(\mathbf{w}, \mathbf{d}) \orderedin \mathbf{i} \mid \mathbf{i} \orderedin \ready}}) \;, \\
+    &&C(15) &\mapsto \encode{\sq{\build{\var{\mathbf{i}}}{\mathbf{i} \orderedin \accumulated}}} \;, \\
+    &&C(16) &\mapsto \se(\var{\sq{\build{(\fixedencode{4}{s}, \encode{h})}{(s, h) \orderedin \lastaccout}}}) \;, \\
     \forall (s \mapsto \mathbf{a}) \in \accounts: &&C(255, s) &\mapsto \mathbf{a}_c \concat \fixedencode{8}{\mathbf{a}_b, \mathbf{a}_g, \mathbf{a}_m, \mathbf{a}_o, \mathbf{a}_f} \concat \fixedencode{4}{\mathbf{a}_i, \mathbf{a}_r, \mathbf{a}_a, \mathbf{a}_p} \;, \\
     \forall (s \mapsto \mathbf{a}) \in \accounts, (\mathbf{k} \mapsto \mathbf{v}) \in \mathbf{a}_\mathbf{s}: &&C(s, \fixedencode{4}{2^{32}-1} \concat \mathbf{k}) &\mapsto \mathbf{v} \;, \\
     \forall (s \mapsto \mathbf{a}) \in \accounts, (h \mapsto \mathbf{p}) \in \mathbf{a}_\mathbf{p}: &&C(s, \fixedencode{4}{2^{32}-2} \concat h) &\mapsto \mathbf{p} \;, \\
-    \forall (s \mapsto \mathbf{a}) \in \accounts, (\tup{h, l} \mapsto \mathbf{t}) \in \mathbf{a}_\mathbf{l}: &&C(s, \fixedencode{4}{l} \concat h) &\mapsto \se(\var{[\fixedencode{4}{x} \mid x \orderedin \mathbf{t}]})
+    \forall (s \mapsto \mathbf{a}) \in \accounts, (\tup{h, l} \mapsto \mathbf{t}) \in \mathbf{a}_\mathbf{l}: &&C(s, \fixedencode{4}{l} \concat h) &\mapsto \encode{\var{\sq{\build{\fixedencode{4}{x}}{x \orderedin \mathbf{t}}}}}
   }
 \end{equation}
 
@@ -73,12 +73,12 @@ Formally, we define the encoding functions $B$ and $L$:
 \begin{align}
   B&\colon\abracegroup{
     (\hash, \hash) &\to \bitstringoflen{512}\\
-    (l, r) &\mapsto [0] \concat \text{bits}(l)_{1\dots} \concat \text{bits}(r)
+    (l, r) &\mapsto [0] \concat \text{bits}(l)\interval{1}{} \concat \text{bits}(r)
   }\\
   L&\colon\abracegroup{
     (\bloboflen{31}, \blob) &\to \bitstringoflen{512}\\
     (k, v) &\mapsto \begin{cases}
-      [1, 0] \concat \text{bits}(\fixedencode{1}{\len{v}})_{2\dots} \concat \text{bits}(k) \concat \text{bits}(v) \concat [0, 0, \dots] &\when \len{v} \le 32\\
+      [1, 0] \concat \text{bits}(\fixedencode{1}{\len{v}})\interval{2}{} \concat \text{bits}(k) \concat \text{bits}(v) \concat [0, 0, \dots] &\when \len{v} \le 32\\
       [1, 1, 0, 0, 0, 0, 0, 0] \concat \text{bits}(k) \concat \text{bits}(\blake(v)) &\otherwise
     \end{cases}
   }
@@ -91,7 +91,7 @@ We may then define the basic Merklization function $\merklizestate$ as:
     \zerohash &\when \len{d} = 0\\
     \blake(\text{bits}^{-1}(L(k, v))) &\when \values{d} = \set{ \tup{k, v} }\\
     \blake(\text{bits}^{-1}(B(M(l), M(r)))) &\otherwise\\
-    \multicolumn{2}{l}{\quad\where \forall b, p: (b \mapsto p) \in d \Leftrightarrow (b_{1\dots} \mapsto p) \in \begin{cases}
+    \multicolumn{2}{l}{\quad\where \forall b, p: (b \mapsto p) \in d \Leftrightarrow (b\interval{1}{} \mapsto p) \in \begin{cases}
       l &\when b_0 = 0 \\
       r &\when b_0 = 1
     \end{cases}
@@ -176,7 +176,7 @@ We define the constant-depth binary Merkle function as $\merklizecd$. We define 
   \label{eq:constantdepthsubtreemerkleleafpage}
   \merklesubtreepage_x&\colon \abracegroup{
     (\sequence{\blob}, \Nmax{\len{\mathbf{v}}}, \blob \to \hash) &\to \sequence{\hash}\\
-    (\mathbf{v}, i, H) &\mapsto [H(\token{\$leaf} \concat l) \mid l \orderedin \mathbf{v}_{2^xi \dots \min(2^xi+2^x, \len{\mathbf{v}})}]
+    (\mathbf{v}, i, H) &\mapsto \sq{\build{H(\token{\$leaf} \concat l)}{l \orderedin \mathbf{v}_{2^xi \dots \min(2^xi+2^x, \len{\mathbf{v}})}}}
   }
 \end{align}
 
