--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -263,7 +263,7 @@ We assume the skip length $\ell$ is well-defined:
 \begin{equation}
 \begin{aligned}
   \using l_X = \min(4, \ell) \,,\quad
-  \immed_X \equiv \sext_{l_X}(\de_{l_X}(\instructions_{\imath+1\dots+l_X}))
+  \immed_X \equiv \sext_{l_X}(\de_{l_X}(\instructions\subrange{\imath+1}{l_X}))
 \end{aligned}
 \end{equation}
 
@@ -281,7 +281,7 @@ We assume the skip length $\ell$ is well-defined:
 \begin{equation}
   \using r_A = \min(12, \instructions_{\imath+1} \bmod 16) \,,\quad
   \reg'_A \equiv \reg'_{r_A} \,,\quad
-  \immed_X \equiv \decode{8}{\instructions_{\imath+2\dots+8}}
+  \immed_X \equiv \decode{8}{\instructions\subrange{\imath+2}{8}}
 \end{equation}
 
 \renewcommand*{\mrule}{\cmidrule(lr){1-4}}
@@ -298,9 +298,9 @@ We assume the skip length $\ell$ is well-defined:
 \begin{equation}
 \begin{aligned}
     \using l_X &= \min(4, \instructions_{\imath+1} \bmod 8) \,,\quad&
-    \immed_X &\equiv \sext_{l_X}(\de_{l_X}(\instructions_{\imath+2\dots+l_X})) \\
+    \immed_X &\equiv \sext_{l_X}(\de_{l_X}(\instructions\subrange{\imath+2}{l_X})) \\
     \using l_Y &= \min(4, \max(0, \ell - l_X - 1)) \,,\quad&
-    \immed_Y &\equiv \sext_{l_Y}(\de_{l_Y}(\instructions_{\imath+2+l_X\dots+l_Y}))
+    \immed_Y &\equiv \sext_{l_Y}(\de_{l_Y}(\instructions\subrange{\imath+2+l_X}{l_Y}))
 \end{aligned}
 \end{equation}
 
@@ -311,9 +311,9 @@ We assume the skip length $\ell$ is well-defined:
   \midrule
   \endhead
   30&\token{store\_imm\_u8}&1&$\memwr_{\immed_X} = \immed_Y \bmod 2^8 $\\ \mrule
-  31&\token{store\_imm\_u16}&1&$\memwr_{\immed_X\dots+2} = \fixedencode{2}{\immed_Y \bmod 2^{16}}$\\ \mrule
-  32&\token{store\_imm\_u32}&1&$\memwr_{\immed_X\dots+4} = \fixedencode{4}{\immed_Y \bmod 2^{32}}$\\ \mrule
-  33&\token{store\_imm\_u64}&1&$\memwr_{\immed_X\dots+8} = \fixedencode{8}{\immed_Y}$\\
+  31&\token{store\_imm\_u16}&1&$\memwr\subrange{\immed_X}{2} = \fixedencode{2}{\immed_Y \bmod 2^{16}}$\\ \mrule
+  32&\token{store\_imm\_u32}&1&$\memwr\subrange{\immed_X}{4} = \fixedencode{4}{\immed_Y \bmod 2^{32}}$\\ \mrule
+  33&\token{store\_imm\_u64}&1&$\memwr\subrange{\immed_X}{8} = \fixedencode{8}{\immed_Y}$\\
 \bottomrule
 \end{longtable}
 
@@ -321,7 +321,7 @@ We assume the skip length $\ell$ is well-defined:
 \begin{equation}
 \begin{aligned}
   \using l_X = \min(4, \ell) \,,\quad
-  \immed_X \equiv \imath + \signfunc{l_X}(\de_{l_X}(\instructions_{\imath+1\dots+l_X}))
+  \immed_X \equiv \imath + \signfunc{l_X}(\de_{l_X}(\instructions\subrange{\imath+1}{l_X}))
 \end{aligned}
 \end{equation}
 
@@ -342,7 +342,7 @@ We assume the skip length $\ell$ is well-defined:
     \reg_A &\equiv \reg_{r_A} \,,\quad
     \reg'_A \equiv \reg'_{r_A} \\
     \using l_X &= \min(4, \max(0, \ell - 1)) \,,\quad&
-    \immed_X &\equiv \sext_{l_X}(\de_{l_X}(\instructions_{\imath+2\dots+l_X}))
+    \immed_X &\equiv \sext_{l_X}(\de_{l_X}(\instructions\subrange{\imath+2}{l_X}))
 \end{aligned}
 \end{equation}
 
@@ -356,15 +356,15 @@ We assume the skip length $\ell$ is well-defined:
   51&\token{load\_imm}&1&$\reg'_A = \immed_X$\\ \mrule
   52&\token{load\_u8}&1&$\reg'_A = \memr_{\immed_X}$\\ \mrule
   53&\token{load\_i8}&1&$\reg'_A = \sext_1(\memr_{\immed_X})$\\ \mrule
-  54&\token{load\_u16}&1&$\reg'_A = \decode{2}{\memr_{\immed_X\dots+2}}$\\ \mrule
-  55&\token{load\_i16}&1&$\reg'_A = \sext_2(\decode{2}{\memr_{\immed_X\dots+2}})$\\ \mrule
-  56&\token{load\_u32}&1&$\reg'_A = \decode{4}{\memr_{\immed_X\dots+4}}$\\ \mrule
-  57&\token{load\_i32}&1&$\reg'_A = \sext_4(\decode{4}{\memr_{\immed_X\dots+4}})$\\ \mrule
-  58&\token{load\_u64}&1&$\reg'_A = \decode{8}{\memr_{\immed_X\dots+8}}$\\ \mrule
+  54&\token{load\_u16}&1&$\reg'_A = \decode{2}{\memr\subrange{\immed_X}{2}}$\\ \mrule
+  55&\token{load\_i16}&1&$\reg'_A = \sext_2(\decode{2}{\memr\subrange{\immed_X}{2}})$\\ \mrule
+  56&\token{load\_u32}&1&$\reg'_A = \decode{4}{\memr\subrange{\immed_X}{4}}$\\ \mrule
+  57&\token{load\_i32}&1&$\reg'_A = \sext_4(\decode{4}{\memr\subrange{\immed_X}{4}})$\\ \mrule
+  58&\token{load\_u64}&1&$\reg'_A = \decode{8}{\memr\subrange{\immed_X}{8}}$\\ \mrule
   59&\token{store\_u8}&1&$\memwr_{\immed_X} = \reg_A \bmod 2^8$\\ \mrule
-  60&\token{store\_u16}&1&$\memwr_{\immed_X\dots+2} = \fixedencode{2}{\reg_A \bmod 2^{16}}$\\ \mrule
-  61&\token{store\_u32}&1&$\memwr_{\immed_X\dots+4} = \fixedencode{4}{\reg_A \bmod 2^{32}}$\\ \mrule
-  62&\token{store\_u64}&1&$\memwr_{\immed_X\dots+8} = \fixedencode{8}{\reg_A}$\\
+  60&\token{store\_u16}&1&$\memwr\subrange{\immed_X}{2} = \fixedencode{2}{\reg_A \bmod 2^{16}}$\\ \mrule
+  61&\token{store\_u32}&1&$\memwr\subrange{\immed_X}{4} = \fixedencode{4}{\reg_A \bmod 2^{32}}$\\ \mrule
+  62&\token{store\_u64}&1&$\memwr\subrange{\immed_X}{8} = \fixedencode{8}{\reg_A}$\\
 \bottomrule
 \end{longtable}
 
@@ -375,9 +375,9 @@ We assume the skip length $\ell$ is well-defined:
     \reg_A &\equiv \reg_{r_A} \,,\quad
     \reg'_A \equiv \reg'_{r_A} \\
     \using l_X &= \min(4, \ffrac{\instructions_{\imath+1}}{16} \bmod 8) \,,\quad&
-    \immed_X &= \sext_{l_X}(\de_{l_X}(\instructions_{\imath+2\dots+l_X})) \\
+    \immed_X &= \sext_{l_X}(\de_{l_X}(\instructions\subrange{\imath+2}{l_X})) \\
     \using l_Y &= \min(4, \max(0, \ell - l_X - 1)) \,,\quad&
-    \immed_Y &= \sext_{l_Y}(\de_{l_Y}(\instructions_{\imath+2+l_X\dots+l_Y}))
+    \immed_Y &= \sext_{l_Y}(\de_{l_Y}(\instructions\subrange{\imath+2+l_X}{l_Y}))
 \end{aligned}
 \end{equation}
 
@@ -388,9 +388,9 @@ We assume the skip length $\ell$ is well-defined:
   \midrule
   \endhead
   70&\token{store\_imm\_ind\_u8}&1&$\memwr_{\reg_A + \immed_X} = \immed_Y \bmod 2^8$\\ \mrule
-  71&\token{store\_imm\_ind\_u16}&1&$\memwr_{\reg_A + \immed_X \dots+ 2} = \fixedencode{2}{\immed_Y \bmod 2^{16}}$\\ \mrule
-  72&\token{store\_imm\_ind\_u32}&1&$\memwr_{\reg_A + \immed_X \dots+ 4} = \fixedencode{4}{\immed_Y \bmod 2^{32}}$\\ \mrule
-  73&\token{store\_imm\_ind\_u64}&1&$\memwr_{\reg_A + \immed_X \dots+ 8} = \fixedencode{8}{\immed_Y}$\\
+  71&\token{store\_imm\_ind\_u16}&1&$\memwr\subrange{\reg_A + \immed_X}{2} = \fixedencode{2}{\immed_Y \bmod 2^{16}}$\\ \mrule
+  72&\token{store\_imm\_ind\_u32}&1&$\memwr\subrange{\reg_A + \immed_X}{4} = \fixedencode{4}{\immed_Y \bmod 2^{32}}$\\ \mrule
+  73&\token{store\_imm\_ind\_u64}&1&$\memwr\subrange{\reg_A + \immed_X}{8} = \fixedencode{8}{\immed_Y}$\\
   \bottomrule
 \end{longtable}
 
@@ -401,9 +401,9 @@ We assume the skip length $\ell$ is well-defined:
       \reg_A &\equiv \reg_{r_A} \,,\quad
       \reg'_A \equiv \reg'_{r_A} \\
       \using l_X &= \min(4, \ffrac{\instructions_{\imath+1}}{16} \bmod 8) \,,\quad&
-      \immed_X &= \sext_{l_X}(\de_{l_X}(\instructions_{\imath+2\dots+l_X})) \\
+      \immed_X &= \sext_{l_X}(\de_{l_X}(\instructions\subrange{\imath+2}{l_X})) \\
       \using l_Y &= \min(4, \max(0, \ell - l_X - 1)) \,,\quad&
-      \immed_Y &= \imath + \signfunc{l_Y}(\de_{l_Y}(\instructions_{\imath+2+l_X\dots+l_Y}))
+      \immed_Y &= \imath + \signfunc{l_Y}(\de_{l_Y}(\instructions\subrange{\imath+2+l_X}{l_Y}))
   \end{aligned}
 \end{equation}
 
@@ -478,7 +478,7 @@ Note, the term $h$ above refers to the beginning of the heap, the second major s
   \reg_B &\equiv \reg_{r_B} \,,\quad
   \reg'_B \equiv \reg'_{r_B} \\
   \using l_X &= \min(4, \max(0, \ell - 1)) \,,\quad&
-  \immed_X &\equiv \sext_{l_X}(\de_{l_X}(\instructions_{\imath+2\dots+l_X}))
+  \immed_X &\equiv \sext_{l_X}(\de_{l_X}(\instructions\subrange{\imath+2}{l_X}))
 \end{aligned}
 \end{equation}
 
@@ -489,16 +489,16 @@ Note, the term $h$ above refers to the beginning of the heap, the second major s
   \midrule
   \endhead
   120&\token{store\_ind\_u8}&1&$\memwr_{\reg_B + \immed_X} = \reg_A \bmod 2^8$\\ \mrule
-  121&\token{store\_ind\_u16}&1&$\memwr_{\reg_B + \immed_X \dots+ 2} = \fixedencode{2}{\reg_A \bmod 2^{16}}$\\ \mrule
-  122&\token{store\_ind\_u32}&1&$\memwr_{\reg_B + \immed_X \dots+ 4} = \fixedencode{4}{\reg_A \bmod 2^{32}}$\\ \mrule
-  123&\token{store\_ind\_u64}&1&$\memwr_{\reg_B + \immed_X \dots+ 8} = \fixedencode{8}{\reg_A}$\\ \mrule
+  121&\token{store\_ind\_u16}&1&$\memwr\subrange{\reg_B + \immed_X}{2} = \fixedencode{2}{\reg_A \bmod 2^{16}}$\\ \mrule
+  122&\token{store\_ind\_u32}&1&$\memwr\subrange{\reg_B + \immed_X}{4} = \fixedencode{4}{\reg_A \bmod 2^{32}}$\\ \mrule
+  123&\token{store\_ind\_u64}&1&$\memwr\subrange{\reg_B + \immed_X}{8} = \fixedencode{8}{\reg_A}$\\ \mrule
   124&\token{load\_ind\_u8}&1&$\reg'_A = \memr_{\reg_B + \immed_X}$\\ \mrule
   125&\token{load\_ind\_i8}&1&$\reg'_A = \unsigned{\signedn{1}{\memr_{\reg_B + \immed_X}}}$\\ \mrule
-  126&\token{load\_ind\_u16}&1&$\reg'_A = \decode{2}{\memr_{\reg_B + \immed_X\dots+2}}$\\ \mrule
-  127&\token{load\_ind\_i16}&1&$\reg'_A = \unsigned{\signedn{2}{\decode{2}{\memr_{\reg_B + \immed_X\dots+2}}}}$\\ \mrule
-  128&\token{load\_ind\_u32}&1&$\reg'_A = \decode{4}{\memr_{\reg_B + \immed_X\dots+4}}$\\ \mrule
-  129&\token{load\_ind\_i32}&1&$\reg'_A = \unsigned{\signedn{4}{\decode{4}{\memr_{\reg_B + \immed_X\dots+4}}}}$\\ \mrule
-  130&\token{load\_ind\_u64}&1&$\reg'_A = \decode{8}{\memr_{\reg_B + \immed_X\dots+8}}$\\ \mrule
+  126&\token{load\_ind\_u16}&1&$\reg'_A = \decode{2}{\memr\subrange{\reg_B + \immed_X}{2}}$\\ \mrule
+  127&\token{load\_ind\_i16}&1&$\reg'_A = \unsigned{\signedn{2}{\decode{2}{\memr\subrange{\reg_B + \immed_X}{2}}}}$\\ \mrule
+  128&\token{load\_ind\_u32}&1&$\reg'_A = \decode{4}{\memr\subrange{\reg_B + \immed_X}{4}}$\\ \mrule
+  129&\token{load\_ind\_i32}&1&$\reg'_A = \unsigned{\signedn{4}{\decode{4}{\memr\subrange{\reg_B + \immed_X}{4}}}}$\\ \mrule
+  130&\token{load\_ind\_u64}&1&$\reg'_A = \decode{8}{\memr\subrange{\reg_B + \immed_X}{8}}$\\ \mrule
   131&\token{add\_imm\_32}&1&$\reg'_A = \sext_4((\reg_B + \immed_X) \bmod 2^{32})$\\ \mrule
   132&\token{and\_imm}&1&$\forall i \in \Nmax{64} : \bits{\reg'_A}_i = \bits{\reg_B}_i \wedge \bits{\immed_X}_i$\\ \mrule
   133&\token{xor\_imm}&1&$\forall i \in \Nmax{64} : \bits{\reg'_A}_i = \bits{\reg_B}_i \oplus \bits{\immed_X}_i$\\ \mrule
@@ -550,7 +550,7 @@ Note, the term $h$ above refers to the beginning of the heap, the second major s
     \reg_B &\equiv \reg_{r_B} \,,\quad
     \reg'_B \equiv \reg'_{r_B} \\
     \using l_X &= \min(4, \max(0, \ell - 1)) \,,\quad&
-    \immed_X &\equiv \imath + \signfunc{l_X}(\de_{l_X}(\instructions_{\imath+2\dots+l_X}))
+    \immed_X &\equiv \imath + \signfunc{l_X}(\de_{l_X}(\instructions\subrange{\imath+2}{l_X}))
   \end{aligned}
 \end{equation}
 
@@ -580,9 +580,9 @@ Note, the term $h$ above refers to the beginning of the heap, the second major s
     \reg_B &\equiv \reg_{r_B} \,,\quad
     \reg'_B \equiv \reg'_{r_B} \\
     \using l_X &= \min(4, \instructions_{\imath+2} \bmod 8) \,,\quad&
-    \immed_X &= \sext_{l_X}(\de_{l_X}(\instructions_{\imath+3\dots+l_X})) \\
+    \immed_X &= \sext_{l_X}(\de_{l_X}(\instructions\subrange{\imath+3}{l_X})) \\
     \using l_Y &= \min(4, \max(0, \ell - l_X - 2)) \,,\quad&
-    \immed_Y &= \sext_{l_Y}(\de_{l_Y}(\instructions_{\imath+3+l_X\dots+l_Y}))
+    \immed_Y &= \sext_{l_Y}(\de_{l_Y}(\instructions\subrange{\imath+3+l_X}{l_Y}))
   \end{aligned}
 \end{equation}
 
